-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1135 2011-07-12 02:04:23 remko Exp $
-----------------------------------------------------------------------------------------

2011-07-11	remko
	* website:		Updates ported from GMT4.

2011-07-07	pwessel
	* pscoast_func.c:	Added river groups A and R which equals a and r except they
				do not include the river-lake features (which are plotted
				as polygons anyway).

2011-07-06	pwessel
	* spotter/gridspotter_func.c:	Fixed porting bugs and added spotter_7.sh as test.
	* gmtvector_func.c:	Fixed several bugs and added some enhancements.  Now has
				a few test scripts in the test dir.
	
2011-07-05	jluis
	* gmt_init.c:		Add GMT_equal_double|float functions to compare floats after
				www.cygnus-software.com/papers/comparingfloats/comparingfloats.htm 
				For the time being they are only used in greenspline.

2011-07-05	pwessel
	* tests:		Added api test for images and a new kml dir with tests for
				gmt2kml and kml2gmt.  Also added tests for x2sys_binlist,
				rotconverter, and gmtspatial.

2011-07-04	pwessel
	* gmtapi_util.c:	Fixed lots of errors for the i/o involving sources and destinations
				not used by the GMT modules (e.g., memory to memory, memory to file,
				etc.)  Added api test suite for this purpose.

2011-06-28	pwessel
	* gmtstitch_func.c:	Fixed some porting bugs.  Got stitch.sh example to run.
	* sph/sphdistance_func.c:	Fixed some porting bugs.  Got all sph examples to run.

2011-06-27	pwessel
	* gmt_io.c:		If the IO_SEGMENT_MARKER is given as B or N then we consider
				blank lines or NaN records as segment breaks, respectively.
				To actually use a B or N as segment marker, escape them with
				a leading backslash.

2011-06-25	jluis
	* gmtswitch.bat:	The Windows version of the *nix gmtswitch script

2011-06-23	pwessel
	* gmt_shore.c:		Now reads new GSHHS 2.2.0 format that includes feature areas