@@ -1,6 +1,9 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1135 2011-07-12 02:04:23 remko Exp $
+	$Id: ChangeLog,v 1.1136 2011-07-14 16:23:50 remko Exp $
 -----------------------------------------------------------------------------------------
+
+2011-07-14	remko
+	* pslib.[ch]:		Made PSL_comment a function for WIN32.
 
 2011-07-11	remko
 	* website:		Updates ported from GMT4.
